# anchored-decoding

./: .gitignore  README.md  compute_mauve_fluency.py  compute_mauve_scores.py  compute_mauve_scores_gpt2_large.py  plot_budget_utilization_tradeoffs.py  plot_mauve_tradeoffs.py  plot_tradeoffs.py  pyproject.toml  test.py  test_byte.py
data/: anchored_0.001_literal_gen.json  anchored_0.1_literal_gen.json  anchored_0.5_literal_gen.json  anchored_10_literal_gen.json  anchored_1_literal_gen.json  anchored_20_literal_gen.json  anchored_5_literal_gen.json  clip_0.001_literal_gen.json  clip_0.1_literal_gen.json  clip_0.5_literal_gen.json  clip_10_literal_gen.json  clip_1_literal_gen.json  clip_20_literal_gen.json  clip_5_literal_gen.json  renyi10_0.001_literal_gen.json  renyi10_0.1_literal_gen.json  renyi10_0.5_literal_gen.json  renyi10_10_literal_gen.json  renyi10_1_literal_gen.json  renyi10_20_literal_gen.json  renyi10_5_literal_gen.json  renyi2_0.001_literal_gen.json  renyi2_0.1_literal_gen.json  renyi2_0.5_literal_gen.json  renyi2_10_literal_gen.json  renyi2_1_literal_gen.json  renyi2_20_literal_gen.json  renyi2_5_literal_gen.json  renyi5_0.001_literal_gen.json  renyi5_0.1_literal_gen.json  renyi5_0.5_literal_gen.json  renyi5_10_literal_gen.json  renyi5_1_literal_gen.json  renyi5_20_literal_gen.json  renyi5_5_literal_gen.json  reversekl_0.001_literal_gen.json  reversekl_0.1_literal_gen.json  reversekl_0.5_literal_gen.json  reversekl_10_literal_gen.json  reversekl_1_literal_gen.json  (+7 more)
mauve/: mauve_scores_risky_gold_gpt2.json  mauve_scores_risky_gold_gpt2_large.json
(+74 files in other folders)
