[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anchoreddecode"
version = "0.1.0"
description = "A package for anchored decoding"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jacqueline He" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "numpy>=1.24.0",
    "ahocorasick-rs>=0.20.0",
    "regex>=2023.0.0",
    "pysimdjson>=5.0.0",
    "pyicu>=2.10",
]

[project.optional-dependencies]
icu = ["PyICU>=2.10"]
dev = [
    "rich>=13.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anchoreddecode"]

[dependency-groups]
dev = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pytest>=7.0.0",
]
